# gh-pr-lander-rs

./: .aliases  .gitignore  .recent-repositories.json  .session.json  2026-06-12-plan-plugin-api-design.md  Cargo.toml  LICENSE  MIGRATION_STATUS.md  README.md  TARGET_ARCHITECTURE.md  VIEW_MODEL_ANALYSIS.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: build.yml  rebase.yml  release-binary-assets.yml  release.yml
architecture/: README.md
crates/gh-actions-log-parser/src/: ansi.rs  parser.rs
crates/gh-client/src/: cached_client.rs  client.rs  client_manager.rs  lib.rs  octocrab_client.rs  types.rs
crates/gh-diff-viewer/src/: action.rs  lib.rs
crates/gh-pr-config/: Cargo.toml
crates/gh-pr-config/src/: app_config.rs  config_file.rs  lib.rs  paths.rs  recent_repositories.rs  session.rs
crates/gh-pr-fix-with-claude/: Cargo.toml
crates/gh-pr-fix-with-claude/src/: checkout.rs  config.rs  key_translation.rs  lib.rs  pr_id.rs  pty.rs  session.rs  state.rs  terminal_screen.rs
crates/gh-pr-lander/: Cargo.toml  README.md
crates/gh-pr-lander-theme/src/: lib.rs
crates/gh-pr-lander/src/: actions.rs  capabilities.rs  cli.rs  command_id.rs  commands.rs  dispatcher.rs  keybindings.rs  keymap.rs  logger.rs  main.rs  reducer.rs  (+6 more)
docs/plans/: 2026-02-18-multiplexer-config-design.md  2026-02-18-multiplexer-config-plan.md
features/: command-palette-progress.md  mvvm-view-model-pattern.md
screenshots/: fix-pr-with-claude.webm
src/: effect.rs  log.rs  log_capture.rs  main copy.rs  main.rs  main.rs.backup  pr.rs  reducer.rs  shortcuts.rs  state.rs  task.rs
(+143 files in other folders)
