[package]
name = "gh-pr-fix-with-claude"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.29", default-features = false, features = ["events"] }
log.workspace = true
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
vt100 = "0.15"

[dev-dependencies]
toml.workspace = true
